--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "react-typed": "^2.0.12",
     "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
   },
